Fix dropdown issue
The edit and delete dropdown menu is no relative to the screen and no
longer gets cutoff if its the first message or cutoff from the side of
the browser window.

--- a/frontend/app/scss/_chat.scss
+++ b/frontend/app/scss/_chat.scss
@@ -552,7 +552,8 @@ ul {
   }
 }
 
-
+.dropdown-menu {
+}
 
 .getting-deleted {
   background-color: rgba(231,76,60, 0.5);
